# agent-disclosure-protocol

./: CHANGELOG.md  PROPOSAL.md  PUBLISHING.md  README.md  RELEASING.md  SPEC.md  THREAT_MODEL.md  biome.json  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
c/: .gitignore  Makefile  agent_disclosure.c  agent_disclosure.h  conformance_test.c
conformance/: conformance.test.ts  fuzz.json  fuzz.test.ts  generate-fuzz.ts  generate-interop.ts  generate-negative.ts  interop.json  interop.test.ts  negative.json  negative.test.ts  schema-drift.test.ts  vectors.json  vectors.ts
docs/: book.toml
examples/: standalone-emitter.ts  two-agents.ts
go/: .gitignore  attestation.go  canonicalize.go  conformance_test.go  did.go  emit.go  emit_test.go  go.mod  handshake.go  jws.go  modules.go  respond_test.go  schema.go  schema_sync_test.go  types.go  verify.go  verifyraw.go  verifyraw_test.go
python/: README.md  pyproject.toml  test_conformance.py  verify_url.py
python/agent_disclosure/: __init__.py  attestation.py  canonical.py  emit.py  handshake.py  modules.py  verify.py
rust/: Cargo.toml
schema/: constraints.json  disclosure.schema.json  jws-signed-disclosure.schema.json  signed-disclosure.schema.json
scripts/: bench.ts  conformanceReport.ts  crossProcess.ts  econSim.ts  generate-schema.ts  leaderboard.ts  serveDisclosure.ts
src/: a2a.ts  adapters.ts  attestation.ts  builder.ts  cli.ts  client.ts  did.ts  discovery.ts  enforcement.ts  erc8004.ts  erc8004Onchain.ts  erc8004Registry.ts  erc8004Validation.ts  erc8004Validator.ts  handshake.ts  vc.ts  (+26 more)
(+75 files in other folders)
