[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-disclosure"
version = "0.1.0"
description = "Native Python verifier for the Agent Disclosure Protocol (ADP)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["cryptography>=42"]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools]
packages = ["agent_disclosure"]
